优化课程表json储存，优化课程表显示算法。